# ProtogenStudio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini
assets/Joytis/: ProjectSettings.json
assets/Kitsu/: ProjectSettings.json
src/: constants.h  main.cpp
src/protogen/: Common.h  Expression.cpp  Expression.h  Grid.h  Mouth.cpp  Mouth.h  ProjectSettings.cpp  ProjectSettings.h  Protogen.cpp  Protogen.h  ProtogenProject.cpp  ProtogenProject.h  Utils.cpp  Utils.h  Vector4.h
src/studio/: ProtogenStudio.cpp  ProtogenStudio.h  SimpleWindows.cpp  SimpleWindows.h  StatusBar.cpp  StatusBar.h  main.cpp
